--- a/src/html/communicat-IA.html
+++ b/src/html/communicat-IA.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <button class="go-back" type="button">
-      <a href="/src/index.html">Go-back</a>
+      <a href="/index.html">Go-back</a>
     </button>
     <input type="text" name="" />
   </body>
