--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <script defer type="module" src="./js/language.js"></script>
+    <link rel="stylesheet" href="./src/css/styles.css" />
+    <script defer type="module" src="./src/js/language.js"></script>
   </head>
   <body>
     <header>
