--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="go-page" type="button">
           <a
             class="link-page"
-            href="./html/communicat-IA.html"
+            href="/src/html/communicat-IA.html"
             data-translate="link"
             >Communicat-IA</a
           >
