--- a/communicat-IA.html
+++ b/communicat-IA.html
@@ -12,8 +12,7 @@
       rel="stylesheet"
     />
     <script defer type="module" src="/src/js/main.js"></script>
-    <link rel="stylesheet" href="/src/css/styles.css" />
-    <link rel="stylesheet" href="/src/css/communicat-IA.css" />
+    <link rel="stylesheet" href="./css/communicat-IA.css" />
   </head>
   <body>
     <header>
@@ -30,11 +29,11 @@
 
           <div class="inner-message-svg">
             <svg class="" width="15" height="15">
-              <use href="/src/img/icons.svg#icon-paste"></use>
+              <use href="./icons.svg#icon-paste"></use>
             </svg>
 
             <svg class="" width="15" height="15">
-              <use href="/src/img/icons.svg#icon-volume"></use>
+              <use href="./icons.svg#icon-volume"></use>
             </svg>
           </div>
 
@@ -51,11 +50,11 @@
 
           <div class="inner-message-svg">
             <svg class="" width="15" height="15">
-              <use href="/src/img/icons.svg#icon-paste"></use>
+              <use href="./icons.svg#icon-paste"></use>
             </svg>
 
             <svg class="" width="15" height="15">
-              <use href="/src/img/icons.svg#icon-volume"></use>
+              <use href="./icons.svg#icon-volume"></use>
             </svg>
           </div>
 
@@ -71,7 +70,7 @@
 
           <button class="user-talt-btn js-user-talt-btn" type="button">
             <svg class="" width="15" height="15">
-              <use href="/src/img/icons.svg#icon-mic"></use>
+              <use href="./icons.svg#icon-mic"></use>
             </svg>
           </button>
 
