--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./src/css/styles.css" />
-    <script defer type="module" src="./src/js/language.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script defer type="module" src="./js/language.js"></script>
   </head>
   <body>
     <header>
@@ -30,10 +30,7 @@
 
       <div class="container">
         <button class="go-page" type="button">
-          <a
-            class="link-page"
-            href="./src/html/communicat-IA.html"
-            data-translate="link"
+          <a class="link-page" href="./communicat-IA.html" data-translate="link"
             >Communicat-IA</a
           >
         </button>
