add interadded functionality for copying and playing messages

--- a/communicat-IA.html
+++ b/communicat-IA.html
@@ -25,21 +25,7 @@
         <div class="message-user">
           <b>User</b>
 
-          <p>Hello</p>
-
-          <div class="inner-message-svg-user">
-            <button class="btn-copy" type="button">
-              <svg class="" width="15" height="15">
-                <use href="./icons.svg#icon-paste"></use>
-              </svg>
-            </button>
-
-            <button class="btn-speech" type="button">
-              <svg class="" width="15" height="15">
-                <use href="./icons.svg#icon-volume"></use>
-              </svg>
-            </button>
-          </div>
+          <p class="message-text-user">Hello</p>
 
           <tt class="time-user">13:46</tt>
         </div>
@@ -47,12 +33,12 @@
         <div class="message-ai">
           <b>ai</b>
 
-          <p>
+          <p class="message-text">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit,
             explicabo.
           </p>
 
-          <div class="inner-message-svg-ai">
+          <div class="inner-message-svg">
             <button class="btn-copy" type="button">
               <svg class="" width="15" height="15">
                 <use href="./icons.svg#icon-paste"></use>
@@ -66,7 +52,7 @@
             </button>
           </div>
 
-          <tt class="time-ia">13:47</tt>
+          <tt class="time-ai">13:47</tt>
         </div>
 
         <form class="user-form">
