--- a/communicat-IA.html
+++ b/communicat-IA.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <!--  config  -->
+    <script
+      id="config"
+      data-api-key="XaPWv89lTrKrj7jzWGp7u5HmFpxx2NGl"
+      data-api-url="https://api.deepinfra.com/v1/openai/chat/completions"
+    ></script>
     <script defer type="module" src="./js/main.js"></script>
     <link rel="stylesheet" href="./css/communicat-IA.css" />
   </head>
@@ -31,7 +37,7 @@
         </div>
 
         <div class="message-ai">
-          <b>ai</b>
+          <b>AI</b>
 
           <p class="message-text">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit,
@@ -41,7 +47,7 @@
           <div class="inner-message-svg">
             <button class="btn-copy" type="button">
               <svg class="" width="15" height="15">
-                <use href="./icons.svg#icon-paste"></use>
+                <use href="./icons.svg#icon-copy"></use>
               </svg>
             </button>
 
