--- a/communicat-IA.html
+++ b/communicat-IA.html
@@ -28,60 +28,31 @@
     </header>
     <main>
       <div class="chat-container">
-        <div class="message-user">
-          <b>User</b>
+        <div class="message-container"></div>
+        <form class="user-form">
+          <textarea
+            class="user-message-inp js-user-message-inp"
+            name="user-message"
+          ></textarea>
 
-          <p class="message-text-user">Hello</p>
-
-          <tt class="time-user">13:46</tt>
-        </div>
-
-        <div class="message-ai">
-          <b>AI</b>
-
-          <p class="message-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit,
-            explicabo.
-          </p>
-
-          <div class="inner-message-svg">
-            <button class="btn-copy" type="button">
-              <svg class="" width="15" height="15">
-                <use href="./icons.svg#icon-copy"></use>
+          <div class="inner-form-svg">
+            <button class="user-talk-btn js-user-talt-btn" type="button">
+              <svg class="icon-mic" width="15" height="15">
+                <use href="./icons.svg#icon-mic"></use>
               </svg>
             </button>
 
-            <button class="btn-speech" type="button">
-              <svg class="" width="15" height="15">
-                <use href="./icons.svg#icon-volume"></use>
+            <button
+              class="user-send-btn js-user-send-btn"
+              type="submit"
+              disabled
+            >
+              <svg class="icon-send" width="15" height="15">
+                <use href="./icons.svg#icon-send"></use>
               </svg>
             </button>
           </div>
-
-          <tt class="time-ai">13:47</tt>
-        </div>
-
-        <form class="user-form">
-          <input
-            class="user-message-inp js-user-message-inp"
-            type="text"
-            name="user-message"
-          />
         </form>
-
-        <div class="inner-form-svg">
-          <button class="user-talk-btn js-user-talt-btn" type="button">
-            <svg class="icon-mic" width="15" height="15">
-              <use href="./icons.svg#icon-mic"></use>
-            </svg>
-          </button>
-
-          <button class="user-send-btn js-user-send-btn" type="submit" disabled>
-            <svg class="icon-send" width="15" height="15">
-              <use href="./icons.svg#icon-send"></use>
-            </svg>
-          </button>
-        </div>
       </div>
     </main>
     <!-- axios -->
