--- a/communicat-IA.html
+++ b/communicat-IA.html
@@ -21,12 +21,12 @@
     <link rel="stylesheet" href="./css/communicat-IA.css" />
   </head>
   <body>
-    <header>
+    <header class="content">
       <button class="go-back" type="button">
         <a href="./index.html">Go-back</a>
       </button>
     </header>
-    <main>
+    <main class="content">
       <div class="chat-container">
         <div class="message-container"></div>
         <form class="user-form">
@@ -55,6 +55,7 @@
         </form>
       </div>
     </main>
+
     <!-- axios -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.8/axios.min.js"
